--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   },
 
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css --minify"
+    "build": "tailwindcss -i ./src/output.css -o ./dist/pages/ --minify"
   }
 }
